# macroscope

./: .dockerignore  .env.example  .flake8  .gitignore  .pylintrc  PERFORMANCE_OPTIMIZATIONS.md  README.md  cloud.md  consolidate-metadata.py  docker-compose.optimized.yml  docker-compose.yml  migrate_logging.py  migrate_openorganelle_logging.py  ml-ai-proposal.md  pyproject.toml  requirements.txt  results.md  roadmap.md  run.sh  run_optimized.sh  run_tests.py  run_tests.sh
.github/workflows/: em-pipeline.yml
app/consolidate/: Dockerfile  README.md  main.py  metadata_catalog_20250530_204210.json  metadata_catalog_20250603_040250.json  metadata_catalog_20250603_045601.json  requirements.txt
app/ebi/: Dockerfile  README.md  main.py  requirements.txt
app/epfl/: Dockerfile  README.md  helpers.py  main.py  requirements.txt
app/flyem/: Dockerfile  README.md  docker-entrypoint.sh  environment.yml  main.py  requirements.txt
app/idr/: Dockerfile  README.md  main.py  requirements.txt
app/openorganelle/: Dockerfile  README.md  __init__.py  helpers.py  main.py  processing.py  requirements.txt
config/: config.yaml
docs/: results.md  tuning.md
examples/: config_development.yaml  metadata_example_ebi.json  metadata_example_openorganelle.json
examples/logs/: run.sh.out
lib/: config_manager.py  loader_config.py  metadata_manager.py
schemas/: metadata_schema.json
scripts/: cleanup_old_metadata.py  fix_legacy_metadata.py  run.sh  run_lint.sh  run_metadata_fix.sh  run_tests.py  run_tests.sh  validate_latest.py
tests/: __init__.py  conftest.py  test_integration.py  test_unit_ebi.py  test_unit_epfl.py  test_unit_flyem.py  test_unit_idr.py  test_unit_metadata_manager.py  test_unit_openorganelle.py
(+2 files in other folders)
